tests/ui/foreign_set.stderr
Error [E0010]: Jet does not use `set`
  --> tests/ui/foreign_set.jet:2:5
    |
  2 |     set limit = 10;
    |     ^^^
 Why: a binding is `val` if it never changes, or `var` if it can
 Fix: replace `set` with `val`
